--- a/.github/workflows/build_spring_boot.yml
+++ b/.github/workflows/build_spring_boot.yml
@@ -4,7 +4,7 @@ on: [push]
   
 jobs:
   Setting-JDK:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
@@ -14,9 +14,11 @@ jobs:
           
   Build-Spring-Boot-Application:
     needs: Setting-JDK
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
-    - name: Use gradle pulgin build jar
-      run: ./SpringBoot/learning_spring_boot/gradlew bootJar
-    - name: list the generated jar
-      run: ls ./SpringBoot/learning_spring_boot/build/libs
+    - name: list the files
+      run: ls
+    # - name: Use gradle pulgin build jar
+    #   run: ./SpringBoot/learning_spring_boot/gradlew bootJar
+    # - name: list the generated jar
+    #   run: ls ./SpringBoot/learning_spring_boot/build/libs
